force-app/main/default/objects/AcctSeed__Project__c/AcctSeed__Project__c.object-meta.xml
<CustomObject>
    <description>Used to document and track time, expense, and revenue associated with projects.</description>
    <label>Project</label>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>