force-app/main/default/objects/AcctSeed__Project__c/fields/Accounting_Clerk__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Clerk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Accounting department clerk whom is updating the ERP Orders</description>
    <label>Accounting Clerk</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>equals</operation>
            <value>Accounting</value>
        </filterItems>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>equals</operation>
            <value>Administrative Assistant</value>
        </filterItems>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>equals</operation>
            <value>Controller</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>responsible_ERP_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>