force-app/main/default/objects/AcctSeed__Project__c/fields/AcctSeed__Account__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Organization for which this project exists for,</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>