force-app/main/default/objects/AcctSeed__Project__c/fields/AcctSeed__Budgeted_Hours__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Budgeted_Hours__c</fullName>
    <description>Summary of hours budgeted at the Project Task Level. Typically used for Labor.</description>
    <inlineHelpText>Summary of hours budgeted at the Project Task Level. Typically used for Labor.</inlineHelpText>
    <label>Budgeted Hours</label>
    <summarizedField>AcctSeed__Project_Task__c.AcctSeed__Budgeted_Hours__c</summarizedField>
    <summaryForeignKey>AcctSeed__Project_Task__c.AcctSeed__Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>