force-app/main/default/objects/AcctSeed__Project__c/fields/AcctSeed__Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Project_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Person responsible for bringing the project in on time and budget while satisfying the customer. Sometimes referred to as &quot;Superman&quot; or &quot;Superwoman&quot;.</inlineHelpText>
    <label>Project Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>