force-app/main/default/objects/AcctSeed__Project__c/fields/AcctSeed__Status__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Status__c</fullName>
    <inlineHelpText>Used in filtered look ups to limit the selection of inactive projects.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>In Shop</fullName>
            </value>
            <value>
                <fullName>Pending Repair</fullName>
            </value>
            <value>
                <fullName>Posted</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Ready For Accounting</fullName>
            </value>
            <value>
                <fullName>Ready to Finalize W/O</fullName>
            </value>
            <value>
                <fullName>At Supplier</fullName>
            </value>
            <value>
                <fullName>In Storage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>