force-app/main/default/objects/AcctSeed__Project__c/fields/AcctSeedERP__Work_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>AcctSeedERP__Work_Order_Number__c</fullName>
    <displayFormat>{00000}</displayFormat>
    <label>Work Order Number</label>
    <type>AutoNumber</type>
</CustomField>