force-app/main/default/objects/AcctSeed__Project__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <formula>IF ( ISPICKVAL( AcctSeed__Status__c ,&apos;Completed&apos;) , Delivery_Date__c  -  CreatedDate,NOW() - CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>