force-app/main/default/objects/AcctSeed__Project__c/fields/Boat_Specialist_Email__c.field-meta.xml
<CustomField>
    <fullName>Boat_Specialist_Email__c</fullName>
    <label>Boat Specialist Email</label>
    <type>Email</type>
</CustomField>