force-app/main/default/objects/AcctSeed__Project__c/fields/BoatModelYear__c.field-meta.xml
<CustomField>
    <fullName>BoatModelYear__c</fullName>
    <label>Boat Model Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>