force-app/main/default/objects/AcctSeed__Project__c/fields/BOM_Email__c.field-meta.xml
<CustomField>
    <fullName>BOM_Email__c</fullName>
    <label>BOM Email</label>
    <type>Email</type>
</CustomField>