force-app/main/default/objects/AcctSeed__Project__c/fields/Business_Manager__c.field-meta.xml
<CustomField>
    <fullName>Business_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Business_Manager_ERP_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>