force-app/main/default/objects/AcctSeed__Project__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Campaign Source</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>ERP Orders</relationshipLabel>
    <relationshipName>ERP_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>