force-app/main/default/objects/AcctSeed__Project__c/fields/Counter_Sale_Type__c.field-meta.xml
<CustomField>
    <fullName>Counter_Sale_Type__c</fullName>
    <label>Counter Sale Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Orientation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>