force-app/main/default/objects/AcctSeed__Project__c/fields/Dealer_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Order_Number__c</fullName>
    <label>Dealer Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>