force-app/main/default/objects/AcctSeed__Project__c/fields/Delivery_Year__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Year__c</fullName>
    <formula>YEAR(DateValue( Delivery_Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>