force-app/main/default/objects/AcctSeed__Project__c/fields/Deposit__c.field-meta.xml
<CustomField>
    <fullName>Deposit__c</fullName>
    <label>Deposit</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>