force-app/main/default/objects/AcctSeed__Project__c/fields/Deposit_Method__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Method__c</fullName>
    <label>Deposit Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>Visa</fullName>
            </value>
            <value>
                <fullName>Debit</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Master Card</fullName>
            </value>
            <value>
                <fullName>AMEX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>