force-app/main/default/objects/AcctSeed__Project__c/fields/ERP_Serial_In_Inventory__c.field-meta.xml
<CustomField>
    <fullName>ERP_Serial_In_Inventory__c</fullName>
    <formula>IF(  ISBLANK(Serial_Number__r.GMBLASERP__Inventory_Balance__c) , false, true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ERP Serial In Inventory</label>
    <type>Checkbox</type>
</CustomField>