force-app/main/default/objects/AcctSeed__Project__c/fields/Factory_Arrival_to_Delivery_Days__c.field-meta.xml
<CustomField>
    <fullName>Factory_Arrival_to_Delivery_Days__c</fullName>
    <formula>If(  ISBLANK( Arrival_Date__c ), null, ( DATEVALUE(Delivery_Date__c) -  Arrival_Date__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Factory Arrival to Delivery Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>