force-app/main/default/objects/AcctSeed__Project__c/fields/Finance_Ammortization__c.field-meta.xml
<CustomField>
    <fullName>Finance_Ammortization__c</fullName>
    <defaultValue>120</defaultValue>
    <label>Finance Ammortization</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>