force-app/main/default/objects/AcctSeed__Project__c/fields/Finance_Compound_Payment__c.field-meta.xml
<CustomField>
    <fullName>Finance_Compound_Payment__c</fullName>
    <formula>IF( ( Finance_Annual_Interest__c == 0 ),
  ( Finance_Amount__c /  Finance_Ammortization__c ),
  ( ( Finance_Compound_Interest__c )* Finance_Amount__c ) / (1 - (1+Finance_Compound_Interest__c)^(- ( Finance_Ammortization__c * 
  Finance_Compound_Per_Year__c / 12 ) ) )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Finance Compound Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>