force-app/main/default/objects/AcctSeed__Project__c/fields/Finance_Compound_Per_Year__c.field-meta.xml
<CustomField>
    <fullName>Finance_Compound_Per_Year__c</fullName>
    <defaultValue>12</defaultValue>
    <label>Finance Compound Per Year</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>