force-app/main/default/objects/AcctSeed__Project__c/fields/Finance_Monthly_Payment_wo_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Finance_Monthly_Payment_wo_Insurance__c</fullName>
    <formula>(
    Finance_Compound_Interest__c * (Pre_Insurance_Total__c -  Deposit__c )
) / (
    1 - (
        (
            (
                1 + Finance_Compound_Interest__c
            ) ^
            (
                - (
                    Finance_Ammortization__c * Finance_Compound_Per_Year__c  / 12
                )
            )
        )
    )
) / (
    12 / Finance_Compound_Per_Year__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Finance Monthly Payment wo Insurance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>