force-app/main/default/objects/AcctSeed__Project__c/fields/Finance_Principal_After_Term__c.field-meta.xml
<CustomField>
    <fullName>Finance_Principal_After_Term__c</fullName>
    <formula>IF( ( Finance_Annual_Interest__c == 0 ),
  ( Finance_Amount__c - ( Finance_Payment_Monthly__c *  Finance_Term__c ) ),
  ( Finance_Amount__c *((1+ Finance_Compound_Interest__c )^ ( Finance_Term__c * Finance_Compound_Per_Year__c / 12)) -( 
    Finance_Compound_Payment__c )*( ( (1+ Finance_Compound_Interest__c )^( Finance_Term__c * Finance_Compound_Per_Year__c / 12) - 1 ) 
    / Finance_Compound_Interest__c ))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Finance Principal After Term</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>