force-app/main/default/objects/AcctSeed__Project__c/fields/Financing_Institution__c.field-meta.xml
<CustomField>
    <fullName>Financing_Institution__c</fullName>
    <label>Financing Institution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Financing_Institution</valueSetName>
    </valueSet>
</CustomField>