force-app/main/default/objects/AcctSeed__Project__c/fields/Finished_Goods__c.field-meta.xml
<CustomField>
    <fullName>Finished_Goods__c</fullName>
    <label>Finished Goods</label>
    <summarizedField>AcctSeed__Project_Task__c.Finished_Goods__c</summarizedField>
    <summaryForeignKey>AcctSeed__Project_Task__c.AcctSeed__Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>