force-app/main/default/objects/AcctSeed__Project__c/fields/Fixed_Asset__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Asset__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Fixed Asset</label>
    <referenceTo>AcctSeed__Fixed_Asset__c</referenceTo>
    <relationshipLabel>ERP Orders</relationshipLabel>
    <relationshipName>ERP_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>