force-app/main/default/objects/AcctSeed__Project__c/fields/GL_Account_Variable_1__c.field-meta.xml
<CustomField>
    <fullName>GL_Account_Variable_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Unit (GLV1)</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The selected Accounting Variable must be of Type 1.</errorMessage>
        <filterItems>
            <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
            <operation>equals</operation>
            <value>GL Account Variable 1</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
    <relationshipLabel>ERP Orders (This Business Unit (GLV1))</relationshipLabel>
    <relationshipName>Projects_GLV1</relationshipName>
    <type>Lookup</type>
</CustomField>