force-app/main/default/objects/AcctSeed__Project__c/fields/GL_Account_Variable_3__c.field-meta.xml
<CustomField>
    <fullName>GL_Account_Variable_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tax Zone (GLV3)</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The value selected for Tax Zone (GLV3) must be an Accounting Variable of Type 3.</errorMessage>
        <filterItems>
            <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
            <operation>equals</operation>
            <value>GL Account Variable 3</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
    <relationshipLabel>ERP Orders</relationshipLabel>
    <relationshipName>ERP_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>