force-app/main/default/objects/AcctSeed__Project__c/fields/GMBLASERP__Billing_City__c.field-meta.xml
<CustomField>
    <fullName>GMBLASERP__Billing_City__c</fullName>
    <label>Billing City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>