force-app/main/default/objects/AcctSeed__Project__c/fields/GMBLASERP__Billing_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>GMBLASERP__Billing_Postal_Code__c</fullName>
    <label>Billing Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>