force-app/main/default/objects/AcctSeed__Project__c/fields/GMBLASERP__Billing_Street__c.field-meta.xml
<CustomField>
    <fullName>GMBLASERP__Billing_Street__c</fullName>
    <label>Billing Street</label>
    <type>TextArea</type>
</CustomField>