force-app/main/default/objects/AcctSeed__Project__c/fields/GMBLASERP__Pricebook__c.field-meta.xml
<CustomField>
    <fullName>GMBLASERP__Pricebook__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>