force-app/main/default/objects/AcctSeed__Project__c/fields/GMBLASERP__Shipping_Street__c.field-meta.xml
<CustomField>
    <fullName>GMBLASERP__Shipping_Street__c</fullName>
    <label>Shipping Street</label>
    <type>TextArea</type>
</CustomField>