force-app/main/default/objects/AcctSeed__Project__c/fields/GMBLASERP__Warehouse__c.field-meta.xml
<CustomField>
    <fullName>GMBLASERP__Warehouse__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Warehouse</label>
    <referenceTo>AcctSeedERP__Warehouse__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>