force-app/main/default/objects/AcctSeed__Project__c/fields/Grand_Total__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total__c</fullName>
    <formula>ROUND(Order_Item_Total__c,2) + ROUND(Tax_Amount_Provincial__c,2) + ROUND(Tax_Amount_Federal__c,2) +  ROUND(Tax_Amount_Retail__c,2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grand Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>