force-app/main/default/objects/AcctSeed__Project__c/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <formula>IF( (Rigging_Status__c = &apos;DONE&apos; || Rigging_Status__c = &apos;Done&apos; || Rigging_Status__c = &apos;done&apos;),  IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 40, 50), NULL )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Image</label>
    <type>Text</type>
</CustomField>