force-app/main/default/objects/AcctSeed__Project__c/fields/Insurance_Item_Total__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Item_Total__c</fullName>
    <description>Total of all insurance items - pre tax</description>
    <label>Insurance_Item_Total</label>
    <summarizedField>AcctSeed__Project_Task__c.Order_Insurance_Total__c</summarizedField>
    <summaryForeignKey>AcctSeed__Project_Task__c.AcctSeed__Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>