force-app/main/default/objects/AcctSeed__Project__c/fields/Insurance_Policies_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Policies_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Available to SR Accounting Perm set</description>
    <label>Insurance Policies Submitted</label>
    <type>Checkbox</type>
</CustomField>