force-app/main/default/objects/AcctSeed__Project__c/fields/Internal_Destination_WarehouseId__c.field-meta.xml
<CustomField>
    <fullName>Internal_Destination_WarehouseId__c</fullName>
    <formula>AcctSeed__Account__r.Warehouse__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Internal Destination WarehouseId</label>
    <type>Text</type>
</CustomField>