force-app/main/default/objects/AcctSeed__Project__c/fields/Internal_Labour_Service__c.field-meta.xml
<CustomField>
    <fullName>Internal_Labour_Service__c</fullName>
    <formula>IF(AND(AcctSeed__Account__r.Is_Internal__c, RecordType.DeveloperName == &#39;Service&#39;), true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Internal Service</label>
    <type>Checkbox</type>
</CustomField>