force-app/main/default/objects/AcctSeed__Project__c/fields/Internal_Partner_Boat_Sale__c.field-meta.xml
<CustomField>
    <fullName>Internal_Partner_Boat_Sale__c</fullName>
    <formula>IF(AND(AcctSeed__Account__r.Is_Internal__c, RecordType.DeveloperName == &apos;PartnerBoatSale&apos;), true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Internal Partner Boat Sale</label>
    <type>Checkbox</type>
</CustomField>