force-app/main/default/objects/AcctSeed__Project__c/fields/Internal_Partner_Parts_Order__c.field-meta.xml
<CustomField>
    <fullName>Internal_Partner_Parts_Order__c</fullName>
    <formula>IF(AND(AcctSeed__Account__r.Is_Internal__c, RecordType.DeveloperName == &#39;LegendPartnerPartsOrder&#39;), true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Internal Partner Parts Order</label>
    <type>Checkbox</type>
</CustomField>