force-app/main/default/objects/AcctSeed__Project__c/fields/Internal_Warranty__c.field-meta.xml
<CustomField>
    <fullName>Internal_Warranty__c</fullName>
    <formula>IF(AND(AcctSeed__Account__r.Is_Internal__c, RecordType.DeveloperName == &apos;Legend_Warranty&apos;), true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Internal Warranty</label>
    <type>Checkbox</type>
</CustomField>