force-app/main/default/objects/AcctSeed__Project__c/fields/License_Plate_erp__c.field-meta.xml
<CustomField>
    <fullName>License_Plate_erp__c</fullName>
    <description>Enter the License Plate number for this customer&apos;s trailer, obtained by submitting the grey form to the province</description>
    <inlineHelpText>Enter the License Plate number for this customer&apos;s trailer, obtained by submitting the grey form to the province</inlineHelpText>
    <label>License Plate</label>
    <length>9</length>
    <type>Text</type>
</CustomField>