force-app/main/default/objects/AcctSeed__Project__c/fields/Manufactured_Product_id__c.field-meta.xml
<CustomField>
    <fullName>Manufactured_Product_id__c</fullName>
    <formula>AcctSeedERP__Manufactured_Product__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manufactured Product id</label>
    <type>Text</type>
</CustomField>