force-app/main/default/objects/AcctSeed__Project__c/fields/Manufactured_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Manufactured_Product_Name__c</fullName>
    <formula>AcctSeedERP__Manufactured_Product__r.Name</formula>
    <label>Manufactured Product Name</label>
    <type>Text</type>
</CustomField>