force-app/main/default/objects/AcctSeed__Project__c/fields/Model_Name__c.field-meta.xml
<CustomField>
    <fullName>Model_Name__c</fullName>
    <formula>AcctSeed__Opportunity__r.BoatId__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Model Name</label>
    <type>Text</type>
</CustomField>