force-app/main/default/objects/AcctSeed__Project__c/fields/No_Payment_Required__c.field-meta.xml
<CustomField>
    <fullName>No_Payment_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkmark if this is a special circumstance where no payment is taken</description>
    <label>No Payment Required</label>
    <type>Checkbox</type>
</CustomField>