force-app/main/default/objects/AcctSeed__Project__c/fields/On_Water_Orientation__c.field-meta.xml
<CustomField>
    <fullName>On_Water_Orientation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>On-Water Orientation</label>
    <type>Checkbox</type>
</CustomField>