force-app/main/default/objects/AcctSeed__Project__c/fields/Oppy_Boat_Model__c.field-meta.xml
<CustomField>
    <fullName>Oppy_Boat_Model__c</fullName>
    <formula>AcctSeed__Opportunity__r.BoatId__r.Name</formula>
    <label>Oppy Boat Model</label>
    <type>Text</type>
</CustomField>