force-app/main/default/objects/AcctSeed__Project__c/fields/Order_Item_Total__c.field-meta.xml
<CustomField>
    <fullName>Order_Item_Total__c</fullName>
    <label>Order Item Total</label>
    <summarizedField>AcctSeed__Project_Task__c.Order_Item_Total__c</summarizedField>
    <summaryForeignKey>AcctSeed__Project_Task__c.AcctSeed__Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>